rnsc/test_data/integration/error/parser/instructions/undefined_label.rns
.class UndefinedLabel
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    goto undefined
    return
  .code_end
.method_end
.class_end
